--- a/Apparato_Digerente/style_Dige.css
+++ b/Apparato_Digerente/style_Dige.css
@@ -33,6 +33,11 @@ body {
 
 h1 {
     font-family: Urbanist;
+    font-size: 3rem;
+    min-width: 500px;
+    position: relative;
+    top: 10px;
+    right: 235px;
 }
 
 h3 {
