--- a/Apparato_Digerente/style_Dige.css
+++ b/Apparato_Digerente/style_Dige.css
@@ -17,6 +17,11 @@
     background-position: center;
     background-attachment: fixed;
     background-size: cover;
+    
+    font-family: Urbanist, sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 
@@ -29,6 +34,18 @@ body {
     height: 100vh;
     margin: 0;
     text-align: center;
+}
+
+.slide_container{
+    position: relative;
+    width: 90%;
+    max-width: 1200px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    gap: 10px;
+    bottom: 120px;
+    right: 170px;
 }
 
 h1 {
