--- a/Apparato_Digerente/style_Dige.css
+++ b/Apparato_Digerente/style_Dige.css
@@ -45,18 +45,25 @@ h1 {
     position: relative;
     top: 10px;
     right: 235px;
+    text-shadow: 2px 2px 2px;
 }
 
 h3 {
     font-family: Urbanist;
     text-align: left;
-    font-size: 3rem;    
+    font-size: 3rem;
+    text-shadow: 2px 2px 3px black; 
 }
 
 p {
     font-family: Urbanist;
     color: rgb(51, 51, 51);
 }
+
+bold{
+    text-shadow: 2px 1px 2px currentColor rgb(112, 112, 112);
+}
+
 
 .arrowC{
     display: flex;
