--- a/Sistema Nervoso/styleNerv.css
+++ b/Sistema Nervoso/styleNerv.css
@@ -12,8 +12,7 @@
 }
 
 .body_Slide {
-    width: 90vw;
-    height: 90vh;
+
     overflow: visible;
     background-image: url(sfondo_nervoso.png);
     background-repeat: no-repeat;
@@ -21,64 +20,56 @@
     background-attachment: fixed;
     background-size: cover;
 
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
     font-family: Urbanist, sans-serif;
 }
 
-
-
-
-
-
-
-
+body {
+    height: 100vh;
+    margin: 0;
+    position: relative;
+}
 
 
 h1 {
     font-family: Urbanist;
     font-size: 3rem;
-    min-width: 500px;
-    top: 10px;
-    right: 235px;
     text-shadow: 2px 2px 2px;
 }
 
 h3 {
     font-family: Urbanist;
     text-align: left;
-    font-size: 3rem;
-    text-shadow: 2px 2px 3px black; 
 }
 
 p {
     font-family: Urbanist;
-    color: rgb(51, 51, 51);
+    color: whitesmoke;
 }
 
 bold{
     text-shadow: 2px 1px 2px currentColor rgb(112, 112, 112);
-}
-
-
-.arrowC{
-    display: flex;
-    justify-content: space-around;  /* Le frecce saranno distribuite uniformemente */
-    align-items: center;
-    margin: 20px 0;
+    font-size: larger;
 }
 
 
 
 
-
-
+/*BOTTONIIII*/
 .buttons {
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
+    position: fixed;
+    bottom: 25px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
 }
 .button {
-    padding: 15px 30px;
-    font-size: 1.2rem;
+    padding: 10px 20px;
+    font-size: 1rem;
     font-weight: bold;
     color: white;
     background-color: #900000;
@@ -90,5 +81,16 @@ bold{
 }
 .button:hover {
     background-color: #b00000;
-    transform: scale(1.05);
+}
+.buttons button:nth-child(1) {
+    transform: translateX(30px);
+}
+.buttons button:nth-child(1):hover {
+    transform: translateX(30px) scale(1.05);
+}
+.buttons button:nth-child(2) {
+    transform: translateX(-30px);
+}
+.buttons button:nth-child(2):hover {
+    transform: translateX(-30px) scale(1.05);
 }
